--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-17748148671');
+  gtag('config', 'AW-17748148671', { 'debug_mode':true });
 </script>
 
     <!-- Google tag (gtag.js) -->
