--- a/index.html
+++ b/index.html
@@ -1,279 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ8M98S07X"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-EQ8M98S07X',{ 'debug_mode':true });
-</script>
-
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WP955RGL');</script>
-<!-- End Google Tag Manager -->
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MilkHarvest - Fresh Dairy From Farm to Home</title>
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background: #f7fafc;
-            color: #333;
-            overflow-x: hidden;
-        }
-
-        header {
-            width: 100%;
-            padding: 20px 60px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: fixed;
-            top: 0;
-            background: white;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-            z-index: 1000;
-        }
-
-        header h1 {
-            font-size: 28px;
-            color: #2f855a;
-            font-weight: 700;
-        }
-
-        nav a {
-            margin-left: 20px;
-            text-decoration: none;
-            font-size: 16px;
-            color: #2d3748;
-            transition: 0.3s;
-        }
-
-        nav a:hover {
-            color: #2f855a;
-        }
-
-        .hero {
-            height: 100vh;
-            padding: 100px 60px;
-            background: url('https://images.unsplash.com/photo-1528731708534-816fe59f90cb') center/cover no-repeat;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            color: white;
-            backdrop-filter: brightness(40%);
-        }
-
-        .hero h2 {
-            font-size: 60px;
-            font-weight: 700;
-        }
-
-        .hero p {
-            font-size: 20px;
-            margin-top: 20px;
-            max-width: 500px;
-        }
-
-        .hero button {
-            margin-top: 30px;
-            padding: 16px 35px;
-            background: #2f855a;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .hero button:hover {
-            background: #276749;
-        }
-
-        /* About Section */
-        .section {
-            padding: 80px 60px;
-            text-align: center;
-        }
-
-        .section h3 {
-            font-size: 36px;
-            color: #2f855a;
-            margin-bottom: 20px;
-        }
-
-        .section p {
-            max-width: 800px;
-            margin: auto;
-            font-size: 18px;
-            line-height: 1.7;
-            color: #4a5568;
-        }
-
-        /* Product Grid */
-        .products {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 30px;
-            padding: 40px 60px;
-        }
-
-        .product-card {
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-            transition: 0.3s;
-        }
-
-        .product-card:hover {
-            transform: translateY(-6px);
-        }
-
-        .product-card img {
-            width: 100%;
-            border-radius: 12px;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .product-card h4 {
-            margin-top: 15px;
-            font-size: 22px;
-        }
-
-        .product-card p {
-            margin-top: 10px;
-            color: #555;
-            font-size: 16px;
-        }
-
-        /* Footer */
-        footer {
-            padding: 40px 20px;
-            background: #2f855a;
-            text-align: center;
-            color: white;
-        }
-
-        footer p {
-            margin-top: 10px;
-            font-size: 14px;
-        }
-
-        @media (max-width: 768px) {
-            header {
-                padding: 20px;
-            }
-
-            .hero {
-                padding: 60px 20px;
-            }
-
-            .hero h2 {
-                font-size: 40px;
-            }
-
-            .hero p {
-                font-size: 16px;
-            }
-
-            .section {
-                padding: 60px 20px;
-            }
-        }
-    </style>
-
+<title>Dairy Products | Home</title>
+<style>
+body{
+    font-family: Arial, sans-serif;
+    background: #f9f9f9;
+    text-align: center;
+}
+.container{
+    margin-top: 100px;
+}
+button{
+    padding: 12px 25px;
+    background: #2D89EF;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+button:hover{
+    background: #1b5cb8;
+}
+h1{
+    font-size: 40px;
+    color: #333;
+}
+</style>
 </head>
+
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WP955RGL"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-
-    <!-- Header -->
-    <header>
-        <h1>MilkHarvest</h1>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#products">Products</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-  
-    <!-- Hero Section -->
-    <section class="hero">
-        <h2>Fresh Dairy From Our Farm to Your Home</h2>
-        <p>Experience pure, chemical-free, farm-fresh milk and dairy products delivered safely at your doorstep.</p>
-        <button>Order Now</button>
-    </section>
-
-    <!-- About -->
-    <section id="about" class="section">
-        <h3>About MilkHarvest</h3>
-        <p>
-            At MilkHarvest, we bring you pure, fresh, and unprocessed dairy directly from our eco-friendly farms. 
-            Our cattle are grass-fed, well-cared for, and milked with utmost hygiene. No preservatives, no chemicals — 
-            just 100% natural goodness for your family.
-        </p>
-    </section>
-
-    <!-- Products -->
-    <section id="products" class="section">
-        <h3>Our Fresh Products</h3>
-    </section>
-
-    <div class="products">
-        <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1580916956884-99de7b53fc90" alt="Milk">
-            <h4>Farm Fresh Milk</h4>
-            <p>Pure, creamy, and chemical-free A2 milk from healthy cows.</p>
-        </div>
-
-        <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1580916956884-99de7b53fc90" alt="Curd">
-            <h4>Natural Curd</h4>
-            <p>Thick, rich curd made from traditionally cultured milk.</p>
-        </div>
-
-        <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1543352634-441b65e80b8b" alt="Ghee">
-            <h4>Organic Ghee</h4>
-            <p>Prepared using the traditional Bilona method for best nutrition.</p>
-        </div>
-
-        <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86" alt="Butter">
-            <h4>Homemade Butter</h4>
-            <p>Fresh, soft, and natural white butter made from A2 milk.</p>
-        </div>
-    </div>
-
-    <!-- Footer -->
-    <footer id="contact">
-        <h3>MilkHarvest</h3>
-        <p>Your trusted source for fresh, natural, and premium dairy.</p>
-        <p>© 2025 MilkHarvest | All Rights Reserved</p>
-    </footer>
-
+<div class="container">
+    <h1>Welcome to Fresh Dairy Products</h1>
+    <p>Your healthy dairy partner</p>
+    <a href="products.html"><button>View All Products</button></a>
+</div>
 </body>
 </html>
