--- a/index.html
+++ b/index.html
@@ -1,40 +1,131 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Dairy Products | Home</title>
-<style>
-body{
-    font-family: Arial, sans-serif;
-    background: #f9f9f9;
-    text-align: center;
-}
-.container{
-    margin-top: 100px;
-}
-button{
-    padding: 12px 25px;
-    background: #2D89EF;
-    border: none;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-button:hover{
-    background: #1b5cb8;
-}
-h1{
-    font-size: 40px;
-    color: #333;
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>DairyFresh • Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <style>
+    /* Inline CSS - Premium minimalistic theme */
+    :root{
+      --bg:#fbfbfb; --card:#ffffff; --muted:#7b7b85; --accent:#0b1320;
+      --accent-2:#1f2937; --glass: rgba(11,19,32,0.05);
+      --radius:14px;
+    }
+    *{box-sizing:border-box;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;}
+    body{margin:0;background:linear-gradient(180deg,var(--bg),#f6f7f8);color:var(--accent-2);min-height:100vh;display:flex;flex-direction:column;}
+    header{display:flex;align-items:center;justify-content:space-between;padding:28px 48px;}
+    .brand{display:flex;align-items:center;gap:16px;text-decoration:none;color:var(--accent-2);}
+    .logo{width:64px;height:64px;display:inline-block}
+    /* inline SVG logo wrapper styles */
+    .brand h1{font-size:20px;margin:0;font-weight:700;letter-spacing:0.2px}
+    .hero{display:flex;gap:48px;align-items:center;padding:40px 48px;}
+    .left{flex:1}
+    .right{flex:1;display:flex;justify-content:center}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:0 8px 30px var(--glass);padding:36px;max-width:720px}
+    h2{margin:0 0 12px 0;font-size:28px}
+    p.lead{margin:0 0 20px 0;color:var(--muted);line-height:1.5}
+    .cta{display:inline-flex;align-items:center;gap:12px;padding:12px 18px;border-radius:12px;background:#0b7a66;color:white;text-decoration:none;font-weight:600;box-shadow:0 6px 20px rgba(11,122,102,0.12)}
+    .secondary{background:transparent;color:var(--accent-2);border:1px solid rgba(16,24,40,0.06);padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:600}
+    footer{margin-top:auto;padding:28px 48px;color:var(--muted);font-size:14px}
+    /* small cart button top-right */
+    .cart-btn{background:transparent;border:1px solid rgba(11,19,32,0.06);padding:8px 12px;border-radius:10px;display:inline-flex;gap:8px;align-items:center;text-decoration:none;color:var(--accent-2)}
+    .cart-badge{background:#0b7a66;color:white;padding:4px 8px;border-radius:999px;font-weight:700;font-size:13px}
+    /* responsive-ish for desktop only as requested */
+    @media (max-width:900px){
+      .hero{flex-direction:column;padding:24px}
+      .right{order:-1}
+    }
+  </style>
 </head>
-
 <body>
-<div class="container">
-    <h1>Welcome to Fresh Dairy Products</h1>
-    <p>Your healthy dairy partner</p>
-    <a href="products.html"><button>View All Products</button></a>
-</div>
+
+  <header>
+    <a class="brand" href="index.html" aria-label="DairyFresh home">
+      <!-- Inline SVG Cow Illustration Logo (style 3) -->
+      <svg class="logo" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true">
+        <defs>
+          <linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
+            <stop offset="0" stop-color="#0b1320"/>
+            <stop offset="1" stop-color="#1f2937"/>
+          </linearGradient>
+        </defs>
+        <g fill="none" fill-rule="evenodd" stroke="url(#g)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <!-- cow head outline -->
+          <path d="M10 26c0-6 5-11 11-11 3 0 6 .8 8.5 2.5C33.2 17 36 18 39 18c6 0 11 5 11 11 0 2.8-1 6-3 8-3 3-8 4-14 4H20c-6 0-10-4-10-9 0-3 0-6 3-7z"/>
+          <!-- ear -->
+          <path d="M18 12c-.5-1.5-2-3-4-3" />
+          <!-- horn -->
+          <path d="M38 12c1-1.5 3-3 5-3" />
+          <!-- spots -->
+          <path d="M27 30c1.5-.5 3-1 4 0s1.5 2 1 3-1.5 2-3 2-3-1-2-4z" fill="url(#g)" stroke="none"/>
+          <path d="M44 36c1.5-.5 2.5-.5 3 0 .5.5 1 1 1 2s-.5 1.5-1 2c-.8.8-2 1-3 0s-2-2-1-4z" fill="url(#g)" stroke="none"/>
+          <!-- eyes -->
+          <circle cx="26" cy="26" r="1.5" fill="url(#g)" stroke="none"/>
+          <circle cx="36" cy="26" r="1.5" fill="url(#g)" stroke="none"/>
+        </g>
+      </svg>
+
+      <div>
+        <h1>DairyFresh</h1>
+      </div>
+    </a>
+
+    <div style="display:flex;align-items:center;gap:12px">
+      <a href="products.html" class="secondary" title="View products">View Products</a>
+      <a class="cart-btn" href="cart.html" title="Open cart">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="opacity:.9" xmlns="http://www.w3.org/2000/svg"><path d="M3 3h2l.4 2M7 13h10l3-8H6.4" stroke="#0b1320" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        <span>Cart</span>
+        <span class="cart-badge" id="badge">0</span>
+      </a>
+    </div>
+  </header>
+
+  <main class="hero" role="main">
+    <div class="left">
+      <div class="card">
+        <h2>Premium dairy, delivered fresh</h2>
+        <p class="lead">Small-batch dairy products made with care — milk, paneer, ghee, butter, cheese and more. Sourced from trusted farms, packaged with minimal processing for pure taste.</p>
+        <div style="display:flex;gap:12px;align-items:center">
+          <a class="cta" href="products.html">Shop products</a>
+          <a class="secondary" href="products.html">Browse catalog</a>
+        </div>
+      </div>
+
+      <div style="margin-top:22px;display:flex;gap:16px">
+        <div style="background:var(--card);padding:18px;border-radius:12px;box-shadow:0 8px 20px var(--glass);min-width:180px">
+          <div style="font-weight:700;font-size:18px">100% Natural</div>
+          <div style="color:var(--muted);margin-top:6px">No preservatives • Cold-chain handled</div>
+        </div>
+        <div style="background:var(--card);padding:18px;border-radius:12px;box-shadow:0 8px 20px var(--glass);min-width:180px">
+          <div style="font-weight:700;font-size:18px">Sustainably Packed</div>
+          <div style="color:var(--muted);margin-top:6px">Eco-friendly packaging</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="right">
+      <img src="https://images.unsplash.com/photo-1582515073490-399813c542d0?q=80&w=900&auto=format&fit=crop&ixlib=rb-4.0.3&s=5b8a7cc0cc6c2f5a2b4b3f23cb7ffc04" alt="Fresh milk splash" style="width:520px;border-radius:12px;box-shadow:0 12px 40px rgba(16,24,40,0.08)">
+    </div>
+  </main>
+
+  <footer>
+    © <span id="year"></span> DairyFresh — Premium dairy delivered. &nbsp;|&nbsp; Built with care.
+  </footer>
+
+  <script>
+    // badge showing cart count (reads localStorage 'df_cart')
+    function updateBadge(){
+      try{
+        const cart = JSON.parse(localStorage.getItem('df_cart')||'[]');
+        const count = cart.reduce((s,i)=>s+(i.qty||1),0);
+        document.getElementById('badge').textContent = count;
+      }catch(e){
+        document.getElementById('badge').textContent = 0;
+      }
+    }
+    updateBadge();
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
